@@ -45,6 +45,6 @@ plotDistToTSS method for list of \code{csAnno} instances
 plotDistToTSS method for \code{csAnno} instance
 }
 \author{
-Guangchuang Yu \url{http://ygc.name}
+Guangchuang Yu \url{https://guangchuangyu.github.io}
 }
 
